--- a/api-rest-node/package.json
+++ b/api-rest-node/package.json
@@ -7,5 +7,19 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Juan Quiros",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt-nodejs":"^0.0.3",
+    "body-parse":"^0.1.0",
+    "connect-multiparty":"^2.2.0",
+    "express":"^4.17.3",
+    "jwt-simple":"^0.5.6",
+    "moment":"^2.29.2",
+    "mongoose":"^6.2.10",
+    "mongoose-paginate-v2":"^1.6.3",
+    "validator":"^13.7.0"
+  },
+  "devDependencies": {
+    "nodemon":"^2.0.15"
+  }
 }
