--- a/api-rest-node/package.json
+++ b/api-rest-node/package.json
@@ -4,6 +4,7 @@
   "description": "API restFul con nodejs",
   "main": "index.js",
   "scripts": {
+    "start":"nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Juan Quiros",
